sensitivity analysis, meng descriptions

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer" role="contentinfo">
     <small>
-        © Copyright 2020 Thomas Dickson / <a href="/atom.xml">RSS Feed</a>.
+        © Copyright CC BY 2020 Thomas Dickson / <a href="/atom.xml">RSS Feed</a>.
     </small>
 </footer>
