--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,7 +15,7 @@ strong, b, h1, h2, h3, h4 {
 }
 
 hr {
-    background: black;
+    background: gray;
     border: 0;
     height: 2px;
     margin: 2rem 0;
@@ -28,7 +28,7 @@ table {
     width: 100%;
 
     tr {
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid gray;
     }
 
     td {
