--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -13,7 +13,7 @@ header p strong {
 }
 
 .post-title {
-    background: black;
+    background: gray;
     margin: 10rem 0;
     color: white;
     padding: 2rem;
@@ -25,12 +25,12 @@ a,a:visited {
   font-weight: bold;
 
   &:hover {
-    color: dodgerblue;
+    color: dodgergray;
   }
 }
 
 a.active {
-    background: black;
+    background: gray;
     padding: 0.5rem;
     color: white;
     font-weight: bold;
@@ -38,7 +38,7 @@ a.active {
 
 blockquote {
   background: #f9f9f9;
-  border-left: 5px solid black;
+  border-left: 5px solid gray;
   font-size: 120%;
   margin: 2rem 0;
   padding: 1rem;
@@ -69,7 +69,7 @@ code, pre {
 }
 
 pre {
-  background: black;
+  background: gray;
   color: white;
   overflow: auto;
   padding: 1em;
