--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,7 @@
     <li><a href="/" {% if page.url == "/" %}class="active"{% endif %}>Index</a></li>
     <li><a href="/about" {% if page.url == "/about" %}class="active"{% endif %}>About</a></li>
     <li><a href="/notes" {% if page.url == "/notes" %}class="active"{% endif %}>Notes</a></li>
-    <li><a href="/projects" {% if page.url == "/projects" %}class="active"{% endif %}>Projects</a></li>
+    <li><a href="/categories" {% if page.url == "/categories" %}class="active"{% endif %}>Categories</a></li>
     <li><a href="/consulting" {% if page.url == "/consulting" %}class="active"{% endif %}>Consulting</a></li>
   </ul>
 </nav>
