--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,7 +9,7 @@ title: Notes
     {{ post.title }}
   </a></h2>
   <p>{{ post.description }}</p>
-  <!-- <time class="date" datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %-d, %Y" }}</time> -->
+  <time class="date" datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %-d, %Y" }}</time>
 </article>
 {% endfor %}
 
