--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,9 +6,16 @@ layout: default
 
 <article role="article">
   <h1>{{ page.title }}</h1>
+  {% capture words %}
+    {{ page.content | number_of_words | minus: 250 }}
+  {% endcapture %}
+  {% unless words contains "-" %}
+    <h4>{{ words | plus: 250 | divided_by: 180 | append: " minute read" }}</h4>
+  {% endunless %}
   <time class="date" datetime="{{ page.date | date_to_xmlschema }}">Posted on {{ page.date | date: "%B %-d, %Y" }}</time>
   <br>
   <time class="date" datetime="{{ page.last_modified_at | date_to_xmlschema }}">Last modified on {{ page.last_modified_at | date: "%B %-d, %Y" }} </time>
+  <br>
   {{ content }}
 </article
 
