caveat on jsonb post, updates to about and consulting sections

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,6 +4,6 @@
     <li><a href="/about" {% if page.url == "/about" %}class="active"{% endif %}>About</a></li>
     <li><a href="/notes" {% if page.url == "/notes" %}class="active"{% endif %}>Notes</a></li>
     <li><a href="/categories" {% if page.url == "/categories" %}class="active"{% endif %}>Categories</a></li>
-    <!-- <li><a href="/consulting" {% if page.url == "/consulting" %}class="active"{% endif %}>Consulting</a></li> -->
+    <li><a href="/consulting" {% if page.url == "/consulting" %}class="active"{% endif %}>Consulting</a></li>
   </ul>
 </nav>
